Sandbox/02-12-2025/force-app/main/default/objects/Sales_Invoice_Matching__c/fields/Approval_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Due_Date__c</fullName>
    <label>Approval Due Date</label>
    <type>Date</type>
</CustomField>