Sandbox/02-12-2025/force-app/main/default/objects/Sales_Invoice_Matching__c/fields/Billing_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account_Owner__c</fullName>
    <formula>Billing_Account__r.Owner.FirstName &amp;&quot; &quot;&amp; Billing_Account__r.Owner.LastName</formula>
    <label>Billing Account Owner</label>
    <type>Text</type>
</CustomField>