Sandbox/02-12-2025/force-app/main/default/objects/Sales_Invoice_Matching__c/fields/Billing_Legal_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Legal_Entity_Name__c</fullName>
    <formula>Billing_Account__r.Contracting_Billing_Entity_Name__c</formula>
    <label>Billing/Legal Entity Name</label>
    <type>Text</type>
</CustomField>