Sandbox/02-12-2025/force-app/main/default/objects/Sales_Invoice_Matching__c/fields/Invoice_Month__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Month__c</fullName>
    <label>Month</label>
    <type>Date</type>
</CustomField>