Sandbox/02-12-2025/force-app/main/default/objects/Sales_Invoice_Matching__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Sales Invoice Matchings</relationshipLabel>
    <relationshipName>Sales_Invoice_Matchings</relationshipName>
    <type>Lookup</type>
</CustomField>