Sandbox/02-12-2025/force-app/main/default/objects/Sales_Invoice_Matching__c/fields/PO__c.field-meta.xml
<CustomField>
    <fullName>PO__c</fullName>
    <label>PO#</label>
    <length>150</length>
    <type>Text</type>
</CustomField>