Sandbox/02-12-2025/force-app/main/default/objects/Sales_Invoice_Matching__c/fields/Sales_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Sales_Invoice_Amount__c</fullName>
    <formula>Sales_Invoice__r.c2g__NetTotal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Invoice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>