Sandbox/02-12-2025/force-app/main/default/objects/Sales_Invoice_Matching__c/listViews/For_Approval.listView-meta.xml
<ListView>
    <fullName>For_Approval</fullName>
    <columns>Approved_for_Posting__c</columns>
    <columns>NAME</columns>
    <columns>Approval_Due_Date__c</columns>
    <columns>Billing_Account__c</columns>
    <columns>Billing_Legal_Entity_Name__c</columns>
    <columns>Billing_Currency__c</columns>
    <columns>Amount_in_Billing_Currency__c</columns>
    <columns>Invoice_Month__c</columns>
    <columns>Line_Item_Notes__c</columns>
    <columns>Sales_Invoice_Number__c</columns>
    <columns>Sales_Invoice_Currency__c</columns>
    <columns>Sales_Invoice_Amount__c</columns>
    <columns>PO__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Sales_Invoice_Due_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Invoice_Number__c</field>
        <operation>startsWith</operation>
        <value>SIN00</value>
    </filters>
    <filters>
        <field>Approved_for_Posting__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>For Approval</label>
</ListView>