Sandbox/02-12-2025/force-app/main/default/objects/Sales_Invoice_Matching__c/listViews/Oct_2022_Billing.listView-meta.xml
<ListView>
    <fullName>Oct_2022_Billing</fullName>
    <columns>Invoice_Month__c</columns>
    <columns>NAME</columns>
    <columns>Billing_Account__c</columns>
    <columns>Billing_Legal_Entity_Name__c</columns>
    <columns>Line_Item_Notes__c</columns>
    <columns>Billing_Currency__c</columns>
    <columns>Amount_in_Billing_Currency__c</columns>
    <columns>Sales_Invoice_Number__c</columns>
    <columns>Approved_for_Posting__c</columns>
    <columns>Sales_Invoice_Amount__c</columns>
    <columns>PO__c</columns>
    <columns>Sales_Invoice_Status__c</columns>
    <columns>Sales_Invoice_Currency__c</columns>
    <columns>Sales_Invoice_Due_Date__c</columns>
    <columns>Opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Line_Item_Notes__c</field>
        <operation>contains</operation>
        <value>Flat</value>
    </filters>
    <filters>
        <field>Sales_Invoice_Number__c</field>
        <operation>notContain</operation>
        <value>SIN00</value>
    </filters>
    <label>Oct 2022 Billing</label>
</ListView>