Sandbox/02-12-2025/force-app/main/default/objects/Sales_Invoice_Matching__c/listViews/Sep_2022_Billing.listView-meta.xml
<ListView>
    <fullName>Sep_2022_Billing</fullName>
    <columns>Invoice_Month__c</columns>
    <columns>NAME</columns>
    <columns>Billing_Account__c</columns>
    <columns>Line_Item_Notes__c</columns>
    <columns>Amount_in_Billing_Currency__c</columns>
    <columns>Billing_Legal_Entity_Name__c</columns>
    <columns>Sales_Invoice_Number__c</columns>
    <columns>Billing_Currency__c</columns>
    <columns>Approved_for_Posting__c</columns>
    <columns>PO__c</columns>
    <columns>Sales_Invoice_Status__c</columns>
    <columns>Sales_Invoice_Currency__c</columns>
    <columns>Sales_Invoice_Amount__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Billing_Account_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Billing_Account__c</field>
        <operation>startsWith</operation>
        <value>Amobee</value>
    </filters>
    <label>Sep 2022 Billing</label>
</ListView>