Sandbox/02-12-2025/force-app/main/default/objects/Sales_Invoice_Matching__c/listViews/Unbilled.listView-meta.xml
<ListView>
    <fullName>Unbilled</fullName>
    <columns>NAME</columns>
    <columns>Invoice_Month__c</columns>
    <columns>Billing_Account__c</columns>
    <columns>Billing_Currency__c</columns>
    <columns>Amount_in_Billing_Currency__c</columns>
    <columns>Line_Item_Notes__c</columns>
    <columns>Billing_Legal_Entity_Name__c</columns>
    <columns>Approved_for_Posting__c</columns>
    <columns>Sales_Invoice_Currency__c</columns>
    <columns>PO__c</columns>
    <columns>Sales_Invoice_Number__c</columns>
    <columns>Sales_Invoice_Amount__c</columns>
    <columns>Sales_Invoice_Status__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Billing_Account_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Approved_for_Posting__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Unbilled</label>
</ListView>